[gd_scene load_steps=2 format=3 uid="uid://d01xq5efsfyfg"]

[ext_resource type="Script" path="res://scripts/wave_manager.gd" id="1_da4e1"]

[node name="WaveManager" type="Node2D"]
script = ExtResource("1_da4e1")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Mobs" type="Node" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
